# vllm-qaic

./: .markdownlint.yaml  .pre-commit-config.yaml  .pymarkdown.json  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  setup.py  typos.toml
.github/PULL_REQUEST_TEMPLATE/: pr_template.md
.github/workflows/: Readme.md  docs.yml
csrc/add_rms_norm/: dispatch.cpp  kernel.cpp  kernel_bf16.cpp
csrc/grouped_topk_router/: grouped_topk_router.cpp  grouped_topk_router_common.h  topk_router.cpp
csrc/reshape_and_cache/: reshape_and_cache_load.cpp  reshape_and_cache_store.cpp
docker/: Dockerfile  Dockerfile.aot  Dockerfile.pyt  build_docker_image.sh  build_vllm_qaic_whl.sh  entrypoint.sh  install_vllm_qaic_in_docker.sh
docs/: STRUCTURE.md  installation.md  mkdocs.yml
docs/docs/: index.md
docs/docs/community/: release_notes.md  roadmap.md
docs/docs/developer_guide/: architecture.md  contributing.md  profiling.md  testing.md
docs/docs/getting_started/: quickstart.md
docs/docs/getting_started/installation/: aot_mode.md  index.md  prerequisites.md
docs/docs/profiling/: index.md
docs/docs/user_guide/: index.md  performance.md
docs/docs/user_guide/configuration/: device_management.md  engine_args.md
docs/docs/user_guide/features/: ccl.md  disaggregated_serving.md  embedding.md  encoder_decoder.md  index.md  lora.md  (+4 more)
examples/: qaic.py  qaic_classify.py  qaic_embed.py  qaic_lora.py  qaic_ngram_suffix.py  qaic_ods_offline.py  qaic_ods_online_client.py  qaic_score.py  qaic_vision_language.py  qaic_vision_language_multi_image.py
requirements/: lint.txt  vllm_dependency_aot.txt
scripts/: build_docker_image.sh  build_wheels.sh  install.sh  install_triton_cpu.sh  install_vllm_qaic_in_docker.sh  utility.sh
tools/: lint.sh  mypy.sh
tools/pre_commit/: check_qualcomm_header.py
vllm_qaic/: __init__.py  _custom_ops.py  envs.py  logger.py  platform.py  platform_base.py  qaic_uniproc_executor.py
vllm_qaic/attention/backends/: qaic_attn.py  qaic_attn_fullblocks.py
vllm_qaic/distributed/: communicator.py
vllm_qaic/model_loader/: qaic.py  qaic_custom_mm_processor.py  qaic_multimodal.py  qaic_session_np.py
vllm_qaic/ops/: __init__.py  activation.py  grouped_topk_router.py  layernorm.py  mm_encoder_attention.py  mrope.py  rotary_embedding.py  topk_router.py  unquantized_fused_moe_method.py
vllm_qaic/patch/: __init__.py  patch_block_table.py  patch_config.py  patch_graph_pickler.py  patch_mem_utils.py  patch_parallel_state.py  patch_rejection_sampler.py  patch_triton_import.py
vllm_qaic/quantization/: quant_config.py
vllm_qaic/spec_decode/: qaic_draft_model.py
vllm_qaic/utils/: qaic_utils.py
vllm_qaic/worker/: model_runner.py  ods_sampling.py  worker.py
(+6 files in other folders)
